feat: action buttons changing color according to dark and light theme

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="ActionButton" parent="Theme.AppCompat">
+        <item name="tint">@color/secondary_200</item>
+    </style>
 </resources>
