--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -19,9 +19,9 @@
             android:layout_marginStart="@dimen/spacing_2"
             android:layout_marginTop="@dimen/spacing_2"
             android:contentDescription="@string/cd_news_source_avatar"
+            android:src="@color/primary_500"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@color/primary_500"
             tools:srcCompat="@tools:sample/avatars" />
 
         <com.google.android.material.textview.MaterialTextView
@@ -80,12 +80,13 @@
             android:layout_height="@dimen/size_6"
             android:contentDescription="@string/cd_save_favorite_item"
             android:padding="0dp"
+            android:theme="@style/ActionButton"
             app:layout_constraintBottom_toBottomOf="@+id/ibShare"
             app:layout_constraintEnd_toStartOf="@+id/ibShare"
             app:layout_constraintTop_toTopOf="@+id/ibShare"
             app:srcCompat="@drawable/ic_favorite_full_24" />
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/ibShare"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="@dimen/size_6"
@@ -93,6 +94,7 @@
             android:layout_marginEnd="@dimen/spacing_2"
             android:layout_marginBottom="@dimen/spacing_2"
             android:contentDescription="@string/cd_share_item"
+            android:theme="@style/ActionButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/ic_share_24" />
