feat: ripple effect to favorite and share button

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,7 +14,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="ActionButton" parent="Theme.AppCompat">
+    <style name="ActionButton" parent="Widget.AppCompat.Button.Borderless">
         <item name="tint">@color/secondary_700</item>
     </style>
 </resources>
