--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -73,9 +73,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/ibFavorite" />
 
+        <!-- Ripple Effect: (https://stackoverflow.com/a/61012286/3072570) -->
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/ibFavorite"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_width="@dimen/size_6"
             android:layout_height="@dimen/size_6"
             android:contentDescription="@string/cd_save_favorite_item"
@@ -88,7 +89,7 @@
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/ibShare"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_width="@dimen/size_6"
             android:layout_height="@dimen/size_6"
             android:layout_marginEnd="@dimen/spacing_2"
